docs/.vuepress/theme/styles/index.styl
@require '~vuepress-plugin-tabs/dist/themes/default.styl';
@import 'theme-dark';
@import 'layout';
@import 'util';
@import 'scrollbar';
@import 'buttons';
@import 'layout-center';
@import 'header';
@import 'sidebar';
@import 'video';
@import 'alert-panels';
@import 'code-copy';
@import 'tabs';
@import 'with-output';

/*
	Root elements styles to force them to use 100% of the viewport
*/
html {
	background-color: $mainBgColor;
    height: 0;
    min-height: 100%;
    display: flex;
    flex-direction: column;
	font-variant-ligatures: none;
}

body {
	background-color: transparent;
	background-image: url('/images/background-schematics.svg');
	background-attachment: fixed;
	background-position: center;
	background-size: cover;
    overflow-y: scroll;
    display: flex;
    flex: 1 0 auto;
    flex-direction: column;
	font-family: 'Open Sans', sans-serif;
}

.theme-container {
	z-index: 4;
	min-height: 100%;
	width: 100%;
	
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

main.page {
	display: flex;
	flex-direction: column;
	flex: 1 0 auto;
}

main.page .theme-default-content {
	flex: 1 0 auto;
	margin-top: 0;
}

.content-footer {
	flex: 0 0 auto;
}

/*
	Scroll Bar
*/

html, pre {
	{scrollbar};
}

// apply scrolling by default excluding firefox due to trigger issues
html.smooth-scroll {
	scroll-behavior: smooth;
}

@supports (-moz-appearance: none) {
	html.smooth-scroll {
		scroll-behavior: auto;
	}
}

img[loading] {
	height: auto;
}

#app {
	height: 100%;
}

a {
	color: $linkColor;
	font-weight: bold;
}

code {
	word-break: break-word;
}

.theme-default-content code {
	background-color: $highlightColor;
	color: $textColor;
	font-family: 'Space Mono', monospace;
	font-size: 0.95em;
}

svg.icon.outbound {
	color: $linkColor;
}

a.header-anchor {
	color: $headingColor;
	font-weight: 300;
}

a.header-anchor:hover {
	text-decoration: none !important;
}

h1, h2, h3, h4, h5 {
	font-family: 'Space Grotesk', sans-serif;
	font-weight: 500;
	color: $headingColor;
}

h2 {
	border-color: $headingColor;
}

h3 {
	font-size: 1.5rem;
}

h4 {
	font-size: 1.25rem;
}

h5 {
	font-size: 1.15rem;
}

.theme-default-content:not(.custom) {
	& > h1 {
		padding-top: 2rem;
	}
}

:root {
	--accent-color: $accentColor;
	--text-color: $textColor;
	--border-color: $borderColor;
	--code-bg-color: $codeBgColor;
	--highlight-color: $highlightColor;
}

tr:nth-child(2n) {
    background-color: transparent;
}

blockquote {
	color: $headingColor;
	border-color: $accentColor;
	font-size: 1.3em;
	p {
		line-height: 1.5;
	}
}

table code {
  white-space: nowrap;
}

.theme-default-content div[class*="language-"],
.theme-default-content pre[class*="language-"] {
    margin-left: 0;
    margin-right: 0;
    border-radius: 0;
}

